fix(core): resolve all critical security vulnerabilities, accounting bugs, performance aggregations and frontend issues from audit